# LegacyBridge

./: .env.example  .gitignore  LICENSE  Makefile  README.md  client_cli.py  demo_banco.toml  demo_video.py  legacybridge.example.toml  main.py  migrate_ai.py  pipeline_cli.py  pyproject.toml  setup.sh  start_demo.sh
Informacion/: Formato FEPI - Proyecto Modernizacion Codigo Legacy(1).docx
dashboard/: index.html  package.json  pnpm-lock.yaml
dashboard/src/: App.tsx  index.css
examples/cobol/: inventory.cob  payroll.cob
examples/cpp_legacy/: data_processing.cpp  employee_system.cpp  memory_management.cpp
examples/html_legacy/: panel_inventario.html
examples/java7_tienda/: TiendaManager.java
examples/java8/: DataProcessor.java  StatusMapper.java  UserService.java
examples/php_legacy/: empleados_sistema.php
output/: evidencia_compilacion_podman.txt  evidencia_ejecucion.txt  evidencia_tests.txt
output/ai_cobol_rust/: inventory.rs  payroll.rs
output/ai_html_to_react/: panel_inventario.tsx
output/ai_java7_to_python/: TiendaManager.py
output/ai_php_to_python/: empleados_sistema.py
output/ai_test/: memory_management.rs
output/demo/: .supervised_state.json  reporte_migracion.html
output/java17/: DataProcessor.java  StatusMapper.java  UserService.java
output/pipeline_cobol/: .migration_state.json
output/pipeline_v2/: .migration_state.json  inventory.rs  payroll.rs
output/rust/: data_processing.rs  employee_system.rs  memory_management.rs
tests/: test_cpp_to_rust.py  test_hard_rules.py  test_pipeline.py  test_transformers.py
(+31 files in other folders)
