[project]
name = "mvp-gestion-proyectos"
version = "0.1.0"
description = "MVP - Software de Refactorización Automatizada de Código Legacy (Java 8 → Java 17+)"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
